# Hexo-RL-Project

./: .gitignore  AGENTS.md  Cargo.toml  dashboard-lan-proxy.err.txt  dashboard-lan-proxy.out.txt  dashboard-mixed.err.txt  dashboard-mixed.out.txt  dashboard-start.err.txt  dashboard-start.out.txt  rust.md  sitecustomize.py
Python/: pyproject.toml
Python/Epoch/Buffer/: buffer.py  buffer_helper.py  regret_buffer.py
Python/Model/: network.py
Python/dashboard_frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
Python/dashboard_frontend/e2e/: smoke.spec.ts
Python/dashboard_frontend/src/: app.tsx  main.tsx  styles 2.css  styles.css
Python/scripts/: fresh_full_probe.py
Python/src/hexorl/: __init__.py  cli.py  runtime.py  v1_pair_contract.py
Python/tests/: conftest.py  test_champion_selection_and_legacy.py  test_checkpoint_league.py  test_config_and_guardrails.py  test_dashboard_foundation.py  test_dashboard_replay_debug.py  test_engine_invariants.py  test_engine_smoke.py  test_global_graph_contract.py  test_inference_server.py  test_model_architecture_stage2.py  test_model_architecture_stage3.py  test_model_architecture_stage4.py  test_optuna_config_surface.py  test_optuna_scout.py  test_phase3_autotune.py  test_phase3_optuna_runner.py  test_phase3_scorecard.py  test_phase3_supervisor.py  test_production_smoke.py  test_rgsc_restart_service.py  test_runtime_dataloader.py  test_runtime_probe.py  test_scorecard_lcb_and_review.py  test_tactical_oracle.py  test_training_data_pipeline.py  test_v1_pair_action_baselines.py  test_v1_pair_biaffine_model.py  test_v1_pair_candidate_selector.py  test_v1_pair_ci_audit_gates.py  test_v1_pair_contract.py  test_v1_pair_eval_guardrails.py  test_v1_pair_search_ffi.py  test_v1_pair_targets.py  test_v1_pair_training_losses.py  test_v1_selfplay_worker_runtime.py
Python/tests/contracts/: test_pair_strategy_registry.py  test_phase01_contract_import_boundaries.py  test_phase01_contract_semantics.py  test_phase02_builders.py
Python/tests/dashboard/: test_dashboard_refactor_routes.py  test_phase08_contract_inspector.py
Python/tests/engine/: test_phase01_engine_contract_parity.py  test_phase01_engine_import_boundaries.py
Python/tests/eval/: test_phase08_eval_policy_provider.py
Python/tests/inference/: fakes.py  test_batching_policy.py  test_dense_adapter_roundtrip.py  test_dynamic_arena_transport.py  test_dynamic_server_helpers.py  test_global_graph_adapter_roundtrip.py  test_inference_boundary_redesign.py  test_inference_no_indefinite_waits.py  test_model_owned_contracts.py  test_no_architecture_string_dispatch.py  test_no_private_inference_rebuilds.py  test_pair_scoring_adapter_roundtrip.py  test_protocol_handshake.py  test_protocol_manifest.py  test_protocol_mismatch.py  test_response_telemetry.py  test_server_collation.py  test_server_dispatch_by_request_kind.py  test_server_scatter_outputs.py  test_shm_transport_lifecycle.py  test_shm_transport_timeouts.py  test_sparse_adapter_roundtrip.py
Python/tests/models/: test_phase03_model_registry.py
Python/tests/phase09/: test_phase09_policy_audit.py
Python/tests/replay/: test_phase06_record_boundary.py  test_phase07_codec_storage_projector.py  test_phase07_import_audit.py
Python/tests/search/: __init__.py  conftest.py  test_engine_adapter.py  test_global_graph_pair_contracts.py  test_pair_strategy.py  test_pair_strategy_selfplay_integration.py  test_policy_provider.py  test_worker_search_boundary.py
Python/tests/selfplay/: conftest.py  test_game_runner_interface.py  test_game_runner_verification.py  test_no_worker_architecture_logic.py  test_pair_strategy_registry_extension.py  test_record_writer.py  test_rgsc_game_runner.py  (+2 more)
crates/hexgame-bench/: Cargo.toml
(+861 files in other folders)
