[package]
name = "hexgame"
version = "0.2.0"
edition = "2021"
description = "Hexo — Rust game engine with Python ML pipeline"
license = "MIT"

[lib]
name = "hexgame"
crate-type = ["cdylib", "rlib"]

[dependencies]
rustc-hash = "2"
smallvec = "1"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"], optional = true }
numpy = { version = "0.24", optional = true }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
python = ["pyo3", "numpy"]

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
inherits = "release"

[[bench]]
name = "engine"
harness = false
