[workspace]
members = ["crates/hexgame-core", "crates/hexgame-py", "crates/hexgame-bench", "crates/hexgame-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Hexo — Rust game engine with Python ML pipeline"

[workspace.dependencies]
rustc-hash = "2"
smallvec = "1"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py310"] }
numpy = "0.24"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
hexgame-core = { path = "crates/hexgame-core" }

[profile.test]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
