[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexorl"
version = "0.2.0"
description = "Hexo RL training pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
hexorl = "hexorl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
